Add border and border radius to images

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
           I've always been attracted to the process of problem solving and development. I enjoy every aspect of my work.
         </p>
         <p class="body-paragraph">
-          I would love to be part of what you're creating!<br /> <span class="contact-email"><a href="mailto:jackramills@yahoo.co.uk">Send me an email.</a></span>
+          I would love to be part of what you're creating!<br />
+          <span class="contact-email"><a href="mailto:jackramills@yahoo.co.uk">Send me an email.</a></span>
         </p>
       </div>
       <div class="col-sm-4 text-center">
