Fix off-center images on certain screen sizes

--- a/index.html
+++ b/index.html
@@ -111,19 +111,19 @@
     <p class="body-subheader top-buffer">Here are some projects I have worked on.</p>
     <div class="row text-center">
       <div class="image-hover col-md-4">
-        <a href="https://github.com/J-Mills/Betterbar"><img class="project-image img-responsive" src="img/betterbar.png" /></a>
+        <a href="https://github.com/J-Mills/Betterbar"><img class="project-image img-responsive center-block" src="img/betterbar.png" /></a>
         <p class="body-paragraph-subheader" style="text-align: center; margin-top: 10px"><u>Ubersicht BetterBar</u></p>
         <p class="body-paragraph" style="text-align: center">A widget made for MacOS built on Ubersicht</p>
         <p class="body-paragraph-light">(Javascript, CoffeeScript, Python, JSON, Bash)</p>
       </div>
       <div class="image-hover col-md-4">
-        <a href="https://github.com/J-Mills/Mr-Robot-2.0"><img class="project-image img-responsive" src="img/mrrobot.png" /></a>
+        <a href="https://github.com/J-Mills/Mr-Robot-2.0"><img class="project-image img-responsive center-block" src="img/mrrobot.png" /></a>
         <p class="body-paragraph-subheader" style="text-align: center; margin-top: 10px"><u>Mr Robot The Discord Bot</u></p>
         <p class="body-paragraph" style="text-align: center">Discord Chat Bot built with discord.js</p>
         <p class="body-paragraph-light">(Javascript, Node.js, Dicord.js, JSON)</p>
       </div>
       <div class="image-hover col-md-4">
-        <a href="https://github.com/J-Mills/J-Mills.github.io"><img class="project-image img-responsive" src="img/jmills.png" /></a>
+        <a href="https://github.com/J-Mills/J-Mills.github.io"><img class="project-image img-responsive center-block" src="img/jmills.png" /></a>
         <p class="body-paragraph-subheader" style="text-align: center; margin-top: 10px"><u>This Website</u></p>
         <p class="body-paragraph" style="text-align: center">A website to showcase my projects and skills</p>
         <p class="body-paragraph-light">(HTML5, CSS3, Javascript, jQuery, Bootstrap)</p>
