--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       <li><a href="https://github.com/J-Mills" target="_blank"><i class="fa fa-github-square"></i></a></li>
       <li><a href="#"><i class="fa fa-codepen" target="_blank"></i></a></li>
       <li><a href="https://twitter.com/TheMizzazz" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
+      <li><a href="drums/drums.html"><i class="fa fa-music"></i></a></li>
     </ul>
   </div>
 
