Add home button to drums

--- a/drums/drums.html
+++ b/drums/drums.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://use.fontawesome.com/c40a15b95c.js"></script>
 </head>
 <body>
-
+<div class="social-links fa-4x home-button">
+  <ul>
+    <li><a href="../index.html"><i class="fa fa-home"></i></a></li>
+  </ul>
+</div>
 
   <div class="keys">
     <div data-key="65" class="key">
