Fix codepen and CV links

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <ul>
       <li><a href="https://www.linkedin.com/in/jack-mills-765b17105/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
       <li><a href="https://github.com/J-Mills" target="_blank"><i class="fa fa-github-square"></i></a></li>
-      <li><a href="#"><i class="fa fa-codepen" target="_blank"></i></a></li>
+      <li><a href="https://codepen.io/Mizzazz/" target="_blank"><i class="fa fa-codepen"></i></a></li>
       <li><a href="https://twitter.com/TheMizzazz" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
       <li><a href="drums/drums.html"><i class="fa fa-music"></i></a></li>
     </ul>
@@ -56,7 +56,7 @@
       <li><a id="about-btn"><i class="fa fa-user"></i> About</a></li>
       <li><a id="projects-btn"><i class="fa fa-terminal"></i> Projects</a></li>
       <li><a id="contact-btn"><i class="fa fa-phone"></i> Contact</a></li>
-      <li><a id=""><i class="fa fa-bars"></i> CV</a></li>
+      <li><a id="" href="documents/JMillsCV.pdf" target="_blank"><i class="fa fa-bars"></i> CV</a></li>
     </ul>
   </nav>
 </div>
