Test mobile support for drums

--- a/drums/drums.html
+++ b/drums/drums.html
@@ -14,10 +14,12 @@
 </div>
 
 <div class="keys">
+  <a onclick="playSound('clap')">
   <div data-key="65" class="key">
     <kbd>A</kbd>
     <span class="sound">clap</span>
   </div>
+</a>
   <div data-key="83" class="key">
     <kbd>S</kbd>
     <span class="sound">hihat</span>
