Add new div for next set of buttons

--- a/drums/drums.html
+++ b/drums/drums.html
@@ -16,11 +16,11 @@
 
 <div class="keys">
   <a onclick="playSound('clap')">
-  <div data-key="65" class="key">
-    <kbd>A</kbd>
-    <span class="sound">clap</span>
-  </div>
-</a>
+    <div data-key="65" class="key">
+      <kbd>A</kbd>
+      <span class="sound">clap</span>
+    </div>
+  </a>
   <div data-key="83" class="key">
     <kbd>S</kbd>
     <span class="sound">hihat</span>
@@ -33,6 +33,8 @@
     <kbd>F</kbd>
     <span class="sound">openhat</span>
   </div>
+</div>
+<div class="keys">
   <div data-key="71" class="key">
     <kbd>G</kbd>
     <span class="sound">boom</span>
