--- a/drums/drums.html
+++ b/drums/drums.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="stylesheet" href="style.css">
   <script src="https://use.fontawesome.com/c40a15b95c.js"></script>
 </head>
