Test ontouchstart event instead of onclick

--- a/drums/drums.html
+++ b/drums/drums.html
@@ -15,7 +15,7 @@
 </div>
 
 <div class="keys">
-  <a onclick="playSound('clap')">
+  <a ontouchstart="playSound('clap')">
     <div data-key="65" class="key">
       <kbd>A</kbd>
       <span class="sound">clap</span>
