--- a/index.html
+++ b/index.html
@@ -112,19 +112,19 @@
     <p class="body-subheader top-buffer">Here are some projects I have worked on.</p>
     <div class="row text-center">
       <div class="image-hover col-md-4">
-        <a href="https://github.com/J-Mills/Betterbar" target="_blank"><img class="project-image img-responsive center-block" src="img/betterbar.png" /></a>
+        <a href="https://github.com/J-Mills/Betterbar" target="_blank" title="GitHub Repo for BetterBar"><img class="project-image img-responsive center-block" src="img/betterbar.png" /></a>
         <p class="body-paragraph-subheader" style="text-align: center; margin-top: 10px"><u>Ubersicht BetterBar</u></p>
         <p class="body-paragraph" style="text-align: center">A widget made for MacOS built on Ubersicht</p>
         <p class="body-paragraph-light">(Javascript, CoffeeScript, Python, JSON, Bash)</p>
       </div>
       <div class="image-hover col-md-4">
-        <a href="https://github.com/J-Mills/Mr-Robot-2.0" target="_blank"><img class="project-image img-responsive center-block" src="img/mrrobot.png" /></a>
+        <a href="https://github.com/J-Mills/Mr-Robot-2.0" target="_blank" title="GitHub Repo for Mr Robot"><img class="project-image img-responsive center-block" src="img/mrrobot.png" /></a>
         <p class="body-paragraph-subheader" style="text-align: center; margin-top: 10px"><u>Mr Robot The Discord Bot</u></p>
         <p class="body-paragraph" style="text-align: center">Discord Chat Bot built with discord.js</p>
         <p class="body-paragraph-light">(Javascript, Node.js, Dicord.js, JSON)</p>
       </div>
       <div class="image-hover col-md-4">
-        <a href="https://github.com/J-Mills/J-Mills.github.io" target="_blank"><img class="project-image img-responsive center-block" src="img/jmills.png" /></a>
+        <a href="https://github.com/J-Mills/J-Mills.github.io" target="_blank" title="GitHub Repo for This Website"><img class="project-image img-responsive center-block" src="img/jmills.png" /></a>
         <p class="body-paragraph-subheader" style="text-align: center; margin-top: 10px"><u>This Website</u></p>
         <p class="body-paragraph" style="text-align: center">A website to showcase my projects and skills</p>
         <p class="body-paragraph-light">(HTML5, CSS3, Javascript, jQuery, Bootstrap)</p>
@@ -132,19 +132,19 @@
     </div>
     <div class="row text-center top-buffer">
       <div class="image-hover col-md-4">
-        <a href="https://codepen.io/collection/DpNRka/" target="_blank"><img class="project-image img-responsive center-block" src="img/js30.png" /></a>
+        <a href="https://codepen.io/collection/DpNRka/" target="_blank" title="CodePen Collection for my Projects"><img class="project-image img-responsive center-block" src="img/js30.png" /></a>
         <p class="body-paragraph-subheader" style="text-align: center; margin-top: 10px"><u>Javascript30 Projects</u></p>
         <p class="body-paragraph" style="text-align: center">My submissions for the Javascript30 Challenge</p>
         <p class="body-paragraph-light">(HTML, CSS, Javascript)</p>
       </div>
       <div class="image-hover col-md-4">
-        <a href="http://glitchblade.tumblr.com/" target="_blank"><img class="project-image img-responsive center-block" src="img/glitchblade.png" /></a>
+        <a href="http://glitchblade.tumblr.com/" target="_blank" title="Dev Blog for the Video Game"><img class="project-image img-responsive center-block" src="img/glitchblade.png" /></a>
         <p class="body-paragraph-subheader" style="text-align: center; margin-top: 10px"><u>Platformer Video Game</u></p>
         <p class="body-paragraph" style="text-align: center">A game I coded in GameMaker</p>
         <p class="body-paragraph-light">(GameMaker Language)</p>
       </div>
       <div class="image-hover col-md-4">
-        <a href="#" target="_blank"><img class="project-image img-responsive center-block" src="img/placeholder.png" /></a>
+        <a href="#" target="_blank" title="Coming Soon!"><img class="project-image img-responsive center-block" src="img/placeholder.png" /></a>
         <p class="body-paragraph-subheader" style="text-align: center; margin-top: 10px"><u>Coming Soon!</u></p>
         <p class="body-paragraph" style="text-align: center">Lorem Ipsum</p>
         <p class="body-paragraph-light">(???)</p>
