Add to about section

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           It was over 10 years ago that I used my first computer and started to build things. Today I am building websites, web applications and software solutions.
         </p>
         <p class="body-paragraph">
-          I've always been attracted to the process of problem solving and development. I enjoy every aspect of my work.
+          I've always been attracted to the process of problem solving and development and I love the creative process of design. I enjoy every aspect of my work.
         </p>
         <p class="body-paragraph">
           I would love to be part of what you're creating!<br />
@@ -171,6 +171,8 @@
   </div>
 </div>
 <!-- CONTACT END -->
+
+<!-- Just attackclone the grit repo pushmerge -->
 
 <script src="js/main.js"></script>
 </body>
