Update Project section, current projects, CV and about section

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </p>
       </div>
       <div class="col-sm-4 text-center">
-        <p class="body-paragraph-subheader"><u>My Skills</u></p>
+        <p class="body-paragraph-subheader"><u><i class="fa fa-terminal terminal-colour"></i> My Skills</u></p>
         <p class="body-paragraph-heavy">Front End Technologies:</p>
         <p class="body-paragraph">HTML5, CSS3, Javascript, jQuery, CoffeeScript</p>
         <p class="body-paragraph-heavy">Back End Technologies:</p>
@@ -93,12 +93,13 @@
         <p class="body-paragraph">Graphic Design and Typography, Photoshop</p>
       </div>
       <div class="col-sm-4 text-center">
-        <p class="body-paragraph-subheader"><u>Current Projects</u></p>
+        <p class="body-paragraph-subheader"><u><i class="fa fa-terminal terminal-colour"></i> Current Projects</u></p>
         <p class="body-paragraph-heavy">Here are some things I'm working on now:</p>
         <ul class="current-projects">
           <li>Updating this website</li>
           <li>Creating some small codepen apps</li>
           <li>Following the <a class="project-link" href="https://javascript30.com/" target="_blank">#JavaScript30</a> challenge</li>
+          <li>Building client websites</li>
         </ul>
       </div>
     </div>
@@ -115,19 +116,19 @@
         <a href="https://github.com/J-Mills/Betterbar" target="_blank" title="GitHub Repo for BetterBar"><img class="project-image img-responsive center-block" src="img/betterbar.png" /></a>
         <p class="body-paragraph-subheader" style="text-align: center; margin-top: 10px"><u>Ubersicht BetterBar</u></p>
         <p class="body-paragraph" style="text-align: center">A widget made for MacOS built on Ubersicht</p>
-        <p class="body-paragraph-light">(Javascript, CoffeeScript, Python, JSON, Bash)</p>
+        <p class="body-paragraph-light">(JavaScript, CoffeeScript, Python, JSON, Bash)</p>
       </div>
       <div class="image-hover col-md-4">
         <a href="https://github.com/J-Mills/Mr-Robot-2.0" target="_blank" title="GitHub Repo for Mr Robot"><img class="project-image img-responsive center-block" src="img/mrrobot.png" /></a>
         <p class="body-paragraph-subheader" style="text-align: center; margin-top: 10px"><u>Mr Robot The Discord Bot</u></p>
         <p class="body-paragraph" style="text-align: center">Discord Chat Bot built with discord.js</p>
-        <p class="body-paragraph-light">(Javascript, Node.js, Dicord.js, JSON)</p>
+        <p class="body-paragraph-light">(JavaScript, Node.js, Dicord.js, JSON)</p>
       </div>
       <div class="image-hover col-md-4">
         <a href="https://github.com/J-Mills/J-Mills.github.io" target="_blank" title="GitHub Repo for This Website"><img class="project-image img-responsive center-block" src="img/jmills.png" /></a>
         <p class="body-paragraph-subheader" style="text-align: center; margin-top: 10px"><u>This Website</u></p>
         <p class="body-paragraph" style="text-align: center">A website to showcase my projects and skills</p>
-        <p class="body-paragraph-light">(HTML5, CSS3, Javascript, jQuery, Bootstrap)</p>
+        <p class="body-paragraph-light">(HTML5, CSS3, JavaScript, jQuery, Bootstrap)</p>
       </div>
     </div>
     <div class="row text-center top-buffer">
@@ -135,7 +136,7 @@
         <a href="https://codepen.io/collection/DpNRka/" target="_blank" title="CodePen Collection for my Projects"><img class="project-image img-responsive center-block" src="img/js30.png" /></a>
         <p class="body-paragraph-subheader" style="text-align: center; margin-top: 10px"><u>Javascript30 Projects</u></p>
         <p class="body-paragraph" style="text-align: center">My submissions for the Javascript30 Challenge</p>
-        <p class="body-paragraph-light">(HTML, CSS, Javascript)</p>
+        <p class="body-paragraph-light">(HTML, CSS, JavaScript)</p>
       </div>
       <div class="image-hover col-md-4">
         <a href="http://glitchblade.tumblr.com/" target="_blank" title="Dev Blog for the Video Game"><img class="project-image img-responsive center-block" src="img/glitchblade.png" /></a>
@@ -144,10 +145,10 @@
         <p class="body-paragraph-light">(GameMaker Language)</p>
       </div>
       <div class="image-hover col-md-4">
-        <a href="#" target="_blank" title="Coming Soon!"><img class="project-image img-responsive center-block" src="img/placeholder.png" /></a>
-        <p class="body-paragraph-subheader" style="text-align: center; margin-top: 10px"><u>Coming Soon!</u></p>
-        <p class="body-paragraph" style="text-align: center">Lorem Ipsum</p>
-        <p class="body-paragraph-light">(???)</p>
+        <a href="#" target="" title="Bored of Beans"><img class="project-image img-responsive center-block" src="img/boredofbeans.png" /></a>
+        <p class="body-paragraph-subheader" style="text-align: center; margin-top: 10px"><u>Bored of Beans (WIP)</u></p>
+        <p class="body-paragraph" style="text-align: center">Website created for a client for students</p>
+        <p class="body-paragraph-light">(HTML, CSS, JavaScript, WordPress, Bootstrap)</p>
       </div>
     </div>
   </div>
