Fix drum spacing and remove empty link on boredofbeans

--- a/drums/drums.html
+++ b/drums/drums.html
@@ -14,7 +14,7 @@
   </ul>
 </div>
 
-<div class="keys">
+<div class="keys top-buffer-200">
   <a ontouchstart="playSound('clap')">
     <div data-key="65" class="key">
       <kbd>A</kbd>
