--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
 <div id="projects" class="">
   <div class="container">
     <p class="body-subheader top-buffer">Here are some projects I have worked on.</p>
-    <div class="row text-center">
+    <p class="body-paragraph-subheader">Click on the images to be taken to the relevant pages!</p>
+    <div class="row text-center top-buffer">
       <div class="image-hover col-md-4">
         <a href="https://github.com/J-Mills/Betterbar" target="_blank" title="GitHub Repo for BetterBar"><img class="project-image img-responsive center-block" src="img/betterbar.png" /></a>
         <p class="body-paragraph-subheader" style="text-align: center; margin-top: 10px"><u>Ubersicht BetterBar</u></p>
@@ -145,7 +146,7 @@
         <p class="body-paragraph-light">(GameMaker Language)</p>
       </div>
       <div class="image-hover col-md-4">
-        <a href="#" target="" title="Bored of Beans"><img class="project-image img-responsive center-block" src="img/boredofbeans.png" /></a>
+        <img class="project-image img-responsive center-block" src="img/boredofbeans.png" />
         <p class="body-paragraph-subheader" style="text-align: center; margin-top: 10px"><u>Bored of Beans (WIP)</u></p>
         <p class="body-paragraph" style="text-align: center">Website created for a client for students</p>
         <p class="body-paragraph-light">(HTML, CSS, JavaScript, WordPress, Bootstrap)</p>
