Add bubble refresh button

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
       <li><a id="" href="documents/JMillsCV.pdf" target="_blank"><i class="fa fa-bars"></i> CV</a></li>
     </ul>
   </nav>
+
+  <div class="bubbles-button">
+    <p><a id="bubble-refresh" onClick="window.location.reload()">Help! I made too many bubbles!</a></p>
+  </div>
 </div>
 <a id="arrow-btn"><div class="scroll-arrow"></div></a>
 <!-- HEADER END -->
@@ -84,13 +88,13 @@
       <div class="col-sm-4 text-center">
         <p class="body-paragraph-subheader"><u><i class="fa fa-terminal terminal-colour"></i> My Skills</u></p>
         <p class="body-paragraph-heavy">Front End Technologies:</p>
-        <p class="body-paragraph">HTML5, CSS3, Javascript, jQuery, CoffeeScript</p>
+        <p class="body-paragraph">HTML5, CSS3, Javascript/ES6, jQuery, CoffeeScript</p>
         <p class="body-paragraph-heavy">Back End Technologies:</p>
         <p class="body-paragraph">Node.js, WordPress</p>
         <p class="body-paragraph-heavy">Software and other Technologies:</p>
-        <p class="body-paragraph">Python, Bash, Linux </p>
+        <p class="body-paragraph">Python, Bash, Linux</p>
         <p class="body-paragraph-heavy">Other Skills:</p>
-        <p class="body-paragraph">Graphic Design and Typography, Photoshop</p>
+        <p class="body-paragraph">Graphic Design, Photoshop, UI and UX</p>
       </div>
       <div class="col-sm-4 text-center">
         <p class="body-paragraph-subheader"><u><i class="fa fa-terminal terminal-colour"></i> Current Projects</u></p>
