--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
   </nav>
 
   <div class="bubbles-button">
-    <p><a id="bubble-refresh" onClick="window.location.reload()">Help! I made too many bubbles!</a></p>
+    <p><a id="bubble-refresh" onclick="window.location.reload()">Help! I made too many bubbles!</a></p>
   </div>
+
 </div>
 <a id="arrow-btn"><div class="scroll-arrow"></div></a>
 <!-- HEADER END -->
