Change social icons and hover animation and icons elsewhere

--- a/index.html
+++ b/index.html
@@ -42,30 +42,42 @@
   </div>
   <div id="social" class="social-links fa-2x text-center">
     <ul>
-      <li><a href="https://www.linkedin.com/in/jack-mills-765b17105/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
-      <li><a href="https://github.com/J-Mills" target="_blank"><i class="fa fa-github-square"></i></a></li>
-      <li><a href="https://codepen.io/Mizzazz/" target="_blank"><i class="fa fa-codepen"></i></a></li>
-      <li><a href="https://twitter.com/TheMizzazz" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
-      <li><a href="drums/drums.html"><i class="fa fa-music"></i></a></li>
+      <li class="fa-stack"><a href="https://www.linkedin.com/in/jack-mills-765b17105/" target="_blank">
+        <i class="fa fa-circle-thin fa-stack-2x"></i>
+        <i class="fa fa-linkedin fa-stack-1x"></i>
+      </a></li>
+      <li class="fa-stack"><a href="https://github.com/J-Mills" target="_blank">
+        <i class="fa fa-circle-thin fa-stack-2x"></i>
+        <i class="fa fa-github fa-stack-1x"></i>
+      </a></li>
+      <li class="fa-stack"><a href="https://codepen.io/Mizzazz/" target="_blank">
+        <i class="fa fa-circle-thin fa-stack-2x"></i>
+        <i class="fa fa-codepen fa-stack-1x"></i>
+      </a></li>
+      <li class="fa-stack"><a href="https://twitter.com/TheMizzazz" target="_blank">
+        <i class="fa fa-circle-thin fa-stack-2x"></i>
+        <i class="fa fa-twitter fa-stack-1x"></i>
+      </a></li>
     </ul>
   </div>
 
   <nav id="navbar-main" class="nav-main">
     <ul>
-      <li><a id="home-btn"><i class="fa fa-home"></i> Home</a></li>
-      <li><a id="about-btn"><i class="fa fa-user"></i> About</a></li>
-      <li><a id="projects-btn"><i class="fa fa-terminal"></i> Projects</a></li>
-      <li><a id="contact-btn"><i class="fa fa-phone"></i> Contact</a></li>
-      <li><a id="" href="documents/JMillsCV.pdf" target="_blank"><i class="fa fa-bars"></i> CV</a></li>
+      <li><a id="home-btn"><i class="fa fa-home fa-fw"></i> Home</a></li>
+      <li><a id="about-btn"><i class="fa fa-user-circle fa-fw"></i> About</a></li>
+      <li><a id="projects-btn"><i class="fa fa-coffee fa-fw"></i> Projects</a></li>
+      <li><a id="contact-btn"><i class="fa fa-phone fa-fw"></i> Contact</a></li>
+      <li><a id="" href="documents/JMillsCV.pdf" target="_blank"><i class="fa fa-bars fa-fw"></i> CV</a></li>
     </ul>
   </nav>
 
-  <div class="bubbles-button">
-    <p><a id="bubble-refresh" onclick="window.location.reload()">Help! I made too many bubbles!</a></p>
-  </div>
+  <!-- <div class="bubbles-button">
+    <p><a id="bubble-refresh">Help! I made too many bubbles!</a></p>
+  </div> -->
 
 </div>
-<a id="arrow-btn"><div class="scroll-arrow"></div></a>
+<a id="arrow-btn"><div class="scroll-arrow text-center"></div></a>
+
 <!-- HEADER END -->
 
 <!-- ABOUT START -->
@@ -87,7 +99,7 @@
         </p>
       </div>
       <div class="col-sm-4 text-center">
-        <p class="body-paragraph-subheader"><u><i class="fa fa-terminal terminal-colour"></i> My Skills</u></p>
+        <p class="body-paragraph-subheader"><u><i class="fa fa-keyboard-o terminal-colour" style="font-size:90%;"></i> My Skills</u></p>
         <p class="body-paragraph-heavy">Front End Technologies:</p>
         <p class="body-paragraph">HTML5, CSS3, Javascript/ES6, jQuery, CoffeeScript</p>
         <p class="body-paragraph-heavy">Back End Technologies:</p>
@@ -98,7 +110,7 @@
         <p class="body-paragraph">Graphic Design, Photoshop, UI and UX</p>
       </div>
       <div class="col-sm-4 text-center">
-        <p class="body-paragraph-subheader"><u><i class="fa fa-terminal terminal-colour"></i> Current Projects</u></p>
+        <p class="body-paragraph-subheader"><u><i class="fa fa-sm fa-flask terminal-colour" style="font-size:75%;"></i> Current Projects</u></p>
         <p class="body-paragraph-heavy">Here are some things I'm working on now:</p>
         <ul class="current-projects">
           <li>Updating this website</li>
@@ -167,12 +179,28 @@
     <p class="body-paragraph-header top-buffer" style="text-align: center">Get in touch.</p>
     <p class="body-paragraph" style="text-align: center">You can reach me at:</p>
     <p class="contact-email"><a href="mailto:jackramills@yahoo.co.uk">jackramills@yahoo.co.uk</a></p>
-    <div id="" class="social-links fa-2x text-center">
+    <div id="" class="social-links fa-lg text-center">
       <ul>
-        <li><a href="https://www.linkedin.com/in/jack-mills-765b17105/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
-        <li><a href="https://github.com/J-Mills" target="_blank"><i class="fa fa-github-square"></i></a></li>
-        <li><a href=""><i class="fa fa-codepen" target="_blank"></i></a></li>
-        <li><a href="https://twitter.com/TheMizzazz" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
+        <li class="fa-stack"><a href="https://www.linkedin.com/in/jack-mills-765b17105/" target="_blank">
+          <i class="fa fa-circle-thin fa-stack-2x"></i>
+          <i class="fa fa-linkedin fa-stack-1x"></i>
+        </a></li>
+        <li class="fa-stack"><a href="https://github.com/J-Mills" target="_blank">
+          <i class="fa fa-circle-thin fa-stack-2x"></i>
+          <i class="fa fa-github fa-stack-1x"></i>
+        </a></li>
+        <li class="fa-stack"><a href="https://codepen.io/Mizzazz/" target="_blank">
+          <i class="fa fa-circle-thin fa-stack-2x"></i>
+          <i class="fa fa-codepen fa-stack-1x"></i>
+        </a></li>
+        <li class="fa-stack"><a href="https://twitter.com/TheMizzazz" target="_blank">
+          <i class="fa fa-circle-thin fa-stack-2x"></i>
+          <i class="fa fa-twitter fa-stack-1x"></i>
+        </a></li>
+        <li class="fa-stack"><a href="drums/drums.html">
+          <i class="fa fa-circle-thin fa-stack-2x"></i>
+          <i class="fa fa-music fa-stack-1x"></i>
+        </a></li>
       </ul>
     </div>
   </div>
