Fix stacking social icons on mobile

--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
   </div>
   <div id="social" class="social-links fa-2x text-center">
     <ul>
-      <li class="fa-stack"><a href="https://www.linkedin.com/in/jack-mills-765b17105/" target="_blank">
+      <li id="social-link-1" class="fa-stack social-links-spacing"><a href="https://www.linkedin.com/in/jack-mills-765b17105/" target="_blank">
         <i class="fa fa-circle-thin fa-stack-2x"></i>
         <i class="fa fa-linkedin fa-stack-1x"></i>
       </a></li>
-      <li class="fa-stack"><a href="https://github.com/J-Mills" target="_blank">
+      <li id="social-link-2" class="fa-stack social-links-spacing"><a href="https://github.com/J-Mills" target="_blank">
         <i class="fa fa-circle-thin fa-stack-2x"></i>
         <i class="fa fa-github fa-stack-1x"></i>
       </a></li>
-      <li class="fa-stack"><a href="https://codepen.io/Mizzazz/" target="_blank">
+      <li id="social-link-3" class="fa-stack social-links-spacing"><a href="https://codepen.io/Mizzazz/" target="_blank">
         <i class="fa fa-circle-thin fa-stack-2x"></i>
         <i class="fa fa-codepen fa-stack-1x"></i>
       </a></li>
-      <li class="fa-stack"><a href="https://twitter.com/TheMizzazz" target="_blank">
+      <li id="social-link-4" class="fa-stack social-links-spacing"><a href="https://twitter.com/TheMizzazz" target="_blank">
         <i class="fa fa-circle-thin fa-stack-2x"></i>
         <i class="fa fa-twitter fa-stack-1x"></i>
       </a></li>
@@ -101,13 +101,13 @@
       <div class="col-sm-4 text-center">
         <p class="body-paragraph-subheader"><u><i class="fa fa-keyboard-o terminal-colour" style="font-size:90%;"></i> My Skills</u></p>
         <p class="body-paragraph-heavy">Front End Technologies:</p>
-        <p class="body-paragraph">HTML5, CSS3, Javascript/ES6, jQuery, CoffeeScript</p>
+        <p class="body-paragraph">HTML5, CSS3, Javascript/ES6, jQuery/AJAX, CoffeeScript</p>
         <p class="body-paragraph-heavy">Back End Technologies:</p>
         <p class="body-paragraph">Node.js, WordPress</p>
         <p class="body-paragraph-heavy">Software and other Technologies:</p>
         <p class="body-paragraph">Python, Bash, Linux</p>
         <p class="body-paragraph-heavy">Other Skills:</p>
-        <p class="body-paragraph">Graphic Design, Photoshop, UI and UX</p>
+        <p class="body-paragraph">Graphic Design, Photoshop/Adobe CS, Responsive Design, UI and UX</p>
       </div>
       <div class="col-sm-4 text-center">
         <p class="body-paragraph-subheader"><u><i class="fa fa-sm fa-flask terminal-colour" style="font-size:75%;"></i> Current Projects</u></p>
