Fix social icon spacing

--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
   </div>
   <div id="social" class="social-links fa-2x text-center">
     <ul>
-      <li id="social-link-1" class="fa-stack social-links-spacing"><a href="https://www.linkedin.com/in/jack-mills-765b17105/" target="_blank">
+      <li class="fa-stack social-links-spacing"><a href="https://www.linkedin.com/in/jack-mills-765b17105/" target="_blank">
         <i class="fa fa-circle-thin fa-stack-2x"></i>
         <i class="fa fa-linkedin fa-stack-1x"></i>
       </a></li>
-      <li id="social-link-2" class="fa-stack social-links-spacing"><a href="https://github.com/J-Mills" target="_blank">
+      <li class="fa-stack social-links-spacing"><a href="https://github.com/J-Mills" target="_blank">
         <i class="fa fa-circle-thin fa-stack-2x"></i>
         <i class="fa fa-github fa-stack-1x"></i>
       </a></li>
-      <li id="social-link-3" class="fa-stack social-links-spacing"><a href="https://codepen.io/Mizzazz/" target="_blank">
+      <li class="fa-stack social-links-spacing"><a href="https://codepen.io/Mizzazz/" target="_blank">
         <i class="fa fa-circle-thin fa-stack-2x"></i>
         <i class="fa fa-codepen fa-stack-1x"></i>
       </a></li>
-      <li id="social-link-4" class="fa-stack social-links-spacing"><a href="https://twitter.com/TheMizzazz" target="_blank">
+      <li class="fa-stack social-links-spacing"><a href="https://twitter.com/TheMizzazz" target="_blank">
         <i class="fa fa-circle-thin fa-stack-2x"></i>
         <i class="fa fa-twitter fa-stack-1x"></i>
       </a></li>
