Add live site link to bored of beans project

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <p class="body-paragraph-light">(GameMaker Language)</p>
       </div>
       <div class="image-hover col-md-4">
-        <img class="project-image img-responsive center-block" src="img/boredofbeans.png" />
+        <a href="http://boredofbeans.co.uk/" target="_blank" title="Live Site"><img class="project-image img-responsive center-block" src="img/boredofbeans.png" /></a>
         <p class="body-paragraph-subheader" style="text-align: center; margin-top: 10px"><u>Bored of Beans (WIP)</u></p>
         <p class="body-paragraph" style="text-align: center">Website created for a client for students</p>
         <p class="body-paragraph-light">(HTML, CSS, JavaScript, WordPress, Bootstrap)</p>
