Fix social icon code formatting

--- a/index.html
+++ b/index.html
@@ -43,22 +43,30 @@
   </div>
   <div id="social" class="social-links fa-2x text-center">
     <ul>
-      <li class="fa-stack social-links-spacing"><a href="https://www.linkedin.com/in/jack-mills-765b17105/" target="_blank">
-        <i class="fa fa-circle-thin fa-stack-2x"></i>
-        <i class="fa fa-linkedin fa-stack-1x"></i>
-      </a></li>
-      <li class="fa-stack social-links-spacing"><a href="https://github.com/J-Mills" target="_blank">
-        <i class="fa fa-circle-thin fa-stack-2x"></i>
-        <i class="fa fa-github fa-stack-1x"></i>
-      </a></li>
-      <li class="fa-stack social-links-spacing"><a href="https://codepen.io/Mizzazz/" target="_blank">
-        <i class="fa fa-circle-thin fa-stack-2x"></i>
-        <i class="fa fa-codepen fa-stack-1x"></i>
-      </a></li>
-      <li class="fa-stack social-links-spacing"><a href="https://twitter.com/TheMizzazz" target="_blank">
-        <i class="fa fa-circle-thin fa-stack-2x"></i>
-        <i class="fa fa-twitter fa-stack-1x"></i>
-      </a></li>
+      <li class="fa-stack social-links-spacing">
+        <a href="https://www.linkedin.com/in/jack-mills-765b17105/" target="_blank">
+          <i class="fa fa-circle-thin fa-stack-2x"></i>
+          <i class="fa fa-linkedin fa-stack-1x"></i>
+        </a>
+      </li>
+      <li class="fa-stack social-links-spacing">
+        <a href="https://github.com/J-Mills" target="_blank">
+          <i class="fa fa-circle-thin fa-stack-2x"></i>
+          <i class="fa fa-github fa-stack-1x"></i>
+        </a>
+      </li>
+      <li class="fa-stack social-links-spacing">
+        <a href="https://codepen.io/Mizzazz/" target="_blank">
+          <i class="fa fa-circle-thin fa-stack-2x"></i>
+          <i class="fa fa-codepen fa-stack-1x"></i>
+        </a>
+      </li>
+      <li class="fa-stack social-links-spacing">
+        <a href="https://twitter.com/TheMizzazz" target="_blank">
+          <i class="fa fa-circle-thin fa-stack-2x"></i>
+          <i class="fa fa-twitter fa-stack-1x"></i>
+        </a>
+      </li>
     </ul>
   </div>
 
@@ -182,26 +190,36 @@
     <p class="contact-email"><a href="mailto:jackramills@yahoo.co.uk">jackramills@yahoo.co.uk</a></p>
     <div id="" class="social-links fa-lg text-center">
       <ul>
-        <li class="fa-stack"><a href="https://www.linkedin.com/in/jack-mills-765b17105/" target="_blank">
-          <i class="fa fa-circle-thin fa-stack-2x"></i>
-          <i class="fa fa-linkedin fa-stack-1x"></i>
-        </a></li>
-        <li class="fa-stack"><a href="https://github.com/J-Mills" target="_blank">
-          <i class="fa fa-circle-thin fa-stack-2x"></i>
-          <i class="fa fa-github fa-stack-1x"></i>
-        </a></li>
-        <li class="fa-stack"><a href="https://codepen.io/Mizzazz/" target="_blank">
-          <i class="fa fa-circle-thin fa-stack-2x"></i>
-          <i class="fa fa-codepen fa-stack-1x"></i>
-        </a></li>
-        <li class="fa-stack"><a href="https://twitter.com/TheMizzazz" target="_blank">
-          <i class="fa fa-circle-thin fa-stack-2x"></i>
-          <i class="fa fa-twitter fa-stack-1x"></i>
-        </a></li>
-        <li class="fa-stack"><a href="drums/drums.html">
-          <i class="fa fa-circle-thin fa-stack-2x"></i>
-          <i class="fa fa-music fa-stack-1x"></i>
-        </a></li>
+        <li class="fa-stack">
+          <a href="https://www.linkedin.com/in/jack-mills-765b17105/" target="_blank">
+            <i class="fa fa-circle-thin fa-stack-2x"></i>
+            <i class="fa fa-linkedin fa-stack-1x"></i>
+          </a>
+        </li>
+        <li class="fa-stack">
+          <a href="https://github.com/J-Mills" target="_blank">
+            <i class="fa fa-circle-thin fa-stack-2x"></i>
+            <i class="fa fa-github fa-stack-1x"></i>
+          </a>
+        </li>
+        <li class="fa-stack">
+          <a href="https://codepen.io/Mizzazz/" target="_blank">
+            <i class="fa fa-circle-thin fa-stack-2x"></i>
+            <i class="fa fa-codepen fa-stack-1x"></i>
+          </a>
+        </li>
+        <li class="fa-stack">
+          <a href="https://twitter.com/TheMizzazz" target="_blank">
+            <i class="fa fa-circle-thin fa-stack-2x"></i>
+            <i class="fa fa-twitter fa-stack-1x"></i>
+          </a>
+        </li>
+        <li class="fa-stack">
+          <a href="drums/drums.html">
+            <i class="fa fa-circle-thin fa-stack-2x"></i>
+            <i class="fa fa-music fa-stack-1x"></i>
+          </a>
+        </li>
       </ul>
     </div>
   </div>
