Remove empty classes from page sections

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <!-- HEADER END -->
 
 <!-- ABOUT START -->
-<div id="about" class="">
+<div id="about">
   <div class="container">
     <p class="body-subheader top-buffer">What I do and how I do it.</p>
     <div class="row text-center">
@@ -134,7 +134,7 @@
 <!-- ABOUT END -->
 
 <!-- PROJECTS START -->
-<div id="projects" class="">
+<div id="projects">
   <div class="container">
     <p class="body-subheader top-buffer">Here are some projects I have worked on.</p>
     <p class="body-paragraph-subheader">Click on the images to be taken to the relevant pages!</p>
@@ -183,7 +183,7 @@
 <!-- PROJECTS END -->
 
 <!-- CONTACT START -->
-<div id="contact" class="">
+<div id="contact">
   <div class="container text-center">
     <p class="body-paragraph-header top-buffer" style="text-align: center">Get in touch.</p>
     <p class="body-paragraph" style="text-align: center">You can reach me at:</p>
