Update website with up-to-date data

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <head>
   <meta charset="utf-8">
   <title>Jack Mills</title>
-  <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
@@ -14,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400" rel="stylesheet">
 
-  <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script src="js/vendor/jquery-3.3.1.min.js"></script>
   <script src="js/vendor/bootstrap.min.js"></script>
   <script src="js/vendor/particles.min.js"></script>
 </head>
@@ -38,7 +37,7 @@
   <p id="title" class="body-subheader"><i class="fa fa-terminal terminal-colour"></i> Web Developer</p>
   <div id="description" class="body-paragraph-container">
     <p class="body-paragraph" style="text-align: center">
-      Hi! I'm Jack. I am a Front End Developer living in Surrey, England.<br /> I like to solve problems.
+      Hi! I'm Jack. I am a Front End Developer living in London.<br /> I like to solve problems.
     </p>
   </div>
   <div id="social" class="social-links fa-2x text-center">
@@ -93,10 +92,10 @@
       <div class="col-sm-4 text-center">
         <p class="body-paragraph-header"><i class="fa fa-terminal terminal-colour"></i> I'm Jack Mills, a Front End Developer.</p>
         <p class="body-paragraph">
-          It was over 10 years ago that I used my first computer and started to build things. Today I am building websites, web applications and software solutions.
+          It was over 10 years ago that I used my first computer and started to create things. Today I am building websites, web applications and software solutions for myself and others!
         </p>
         <p class="body-paragraph">
-          I've always been attracted to the process of problem solving and development and I love the creative process of design. I enjoy every aspect of my work.
+          I've always been attracted to the process of problem solving and development and I love the creative methods of design. I enjoy every aspect of my work.
         </p>
         <p class="body-paragraph">
           I would love to be part of what you're creating!<br />
@@ -106,20 +105,20 @@
       <div class="col-sm-4 text-center">
         <p class="body-paragraph-subheader"><u><i class="fa fa-keyboard-o terminal-colour" style="font-size:90%;"></i> My Skills</u></p>
         <p class="body-paragraph-heavy">Front End Technologies:</p>
-        <p class="body-paragraph">HTML5, CSS3, Javascript/ES6, jQuery/AJAX, CoffeeScript</p>
+        <p class="body-paragraph">HTML5, CSS3, Javascript/ES6, jQuery/AJAX, React, Redux, CoffeeScript</p>
         <p class="body-paragraph-heavy">Back End Technologies:</p>
-        <p class="body-paragraph">Node.js, WordPress</p>
+        <p class="body-paragraph">Node.js, WordPress, C# .NET, MySQL</p>
         <p class="body-paragraph-heavy">Software and other Technologies:</p>
-        <p class="body-paragraph">Python, Bash, Linux</p>
+        <p class="body-paragraph">Python, Bash, Linux, Webpack, Babel</p>
         <p class="body-paragraph-heavy">Other Skills:</p>
-        <p class="body-paragraph">Graphic Design, Photoshop/Adobe CS, Responsive Design, UI and UX</p>
+        <p class="body-paragraph">Graphic Design, Photoshop/Adobe CS, Responsive Design, UI and UX, Agile</p>
       </div>
       <div class="col-sm-4 text-center">
         <p class="body-paragraph-subheader"><u><i class="fa fa-sm fa-flask terminal-colour" style="font-size:75%;"></i> Current Projects</u></p>
         <p class="body-paragraph-heavy">Here are some things I'm working on now:</p>
         <ul class="current-projects">
-          <li>Updating this website</li>
-          <li>Creating some small codepen apps</li>
+          <li>Converting this site to use webpack/react</li>
+          <li>Learning typescript</li>
           <li>Following the <a class="project-link" href="https://javascript30.com/" target="_blank">#JavaScript30</a> challenge</li>
           <li>Building client websites</li>
         </ul>
@@ -142,10 +141,10 @@
         <p class="body-paragraph-light">(JavaScript, CoffeeScript, Python, JSON, Bash)</p>
       </div>
       <div class="image-hover col-md-4">
-        <a href="https://github.com/J-Mills/Mr-Robot-2.0" target="_blank" title="GitHub Repo for Mr Robot"><img class="project-image img-responsive center-block" src="img/mrrobot.png" /></a>
-        <p class="body-paragraph-subheader" style="text-align: center; margin-top: 10px"><u>Mr Robot The Discord Bot</u></p>
+        <a href="https://github.com/J-Mills/LadBot" target="_blank" title="GitHub Repo for LadBot"><img class="project-image img-responsive center-block" src="img/mrrobot.png" /></a>
+        <p class="body-paragraph-subheader" style="text-align: center; margin-top: 10px"><u>LadBot The Discord Bot</u></p>
         <p class="body-paragraph" style="text-align: center">Discord Chat Bot built with discord.js</p>
-        <p class="body-paragraph-light">(JavaScript, Node.js, Dicord.js, JSON)</p>
+        <p class="body-paragraph-light">(JavaScript, Node.js/npm, Dicord.js, JSON)</p>
       </div>
       <div class="image-hover col-md-4">
         <a href="https://github.com/J-Mills/J-Mills.github.io" target="_blank" title="GitHub Repo for This Website"><img class="project-image img-responsive center-block" src="img/jmills.png" /></a>
