--- a/dice/dice.html
+++ b/dice/dice.html
@@ -12,6 +12,7 @@
   <script
     src="https://rawcdn.githack.com/mrdoob/three.js/d9f87fb1a2c5db1ea0e2feda9bd42b39b5bedc41/examples/js/loaders/GLTFLoader.js"></script>
   <script src="https://unpkg.com/three@0.85.0/examples/js/controls/OrbitControls.js"></script>
+  <script src="https://unpkg.com/three@0.85.0/examples/js/controls/TrackballControls.js"></script>
   <link rel="stylesheet" href="css/main.css">
   <style>
     body {
@@ -25,8 +26,7 @@
 </head>
 
 <body>
-  <div class="test" style="padding-top: 250px; text-align: center;"> JACK AND PAGIES DICE SHOP
-    BLICK TO ENTER</div>
+  <div class="test" style="padding-top: 250px; text-align: center;"> </div>
 
   <div id="3d-dice" style="position: absolute; z-index: -1; top: 0;"></div>
   <script src="three-test.js"></script>
